--- a/crm/templates/base.html
+++ b/crm/templates/base.html
@@ -206,7 +206,7 @@
                         </a>
                     </li>
                      <li class="nav-item">
-                        <a href="{% url 'ingredient_manage' %}" class="nav-link">
+                        <a href="{% url 'ingredient_list' %}" class="nav-link">
                             <i class="bi bi-person-badge-fill"></i>
                             <p>Ingredients</p>
                         </a>
@@ -240,13 +240,21 @@
                         </a>
                     </li>
                     </li>
-                    {% comment %}
+
                     <li class="nav-item">
-                        <a href="{% url 'notification' %}" class="nav-link">
+                        <a href="{% url 'inventory_list' %}" class="nav-link">
                             <i class="bi bi-bell-fill"></i>
-                            <p>Notification</p>
+                            <p>Inventory</p>
                         </a>
-                    </li> {% endcomment %}
+                    </li>
+                                        <li class="nav-item">
+                        <a href="{% url 'service_list' %}" class="nav-link">
+                            <i class="bi bi-bell-fill"></i>
+                            <p>Service</p>
+                        </a>
+                    </li>
+
+
 
 
 
