Add logic for meal service

--- a/crm/templates/base.html
+++ b/crm/templates/base.html
@@ -248,7 +248,7 @@
                         </a>
                     </li>
                                         <li class="nav-item">
-                        <a href="{% url 'service_list' %}" class="nav-link">
+                        <a href="{% url 'service:service_list' %}" class="nav-link">
                             <i class="bi bi-bell-fill"></i>
                             <p>Service</p>
                         </a>
