--- a/crm/templates/product_list.html
+++ b/crm/templates/product_list.html
@@ -32,7 +32,7 @@
               <td>{{ forloop.counter }}</td>
               <td>{{ product.name }}</td>
               <td>{{ product.category_id }}</td>
-              <td>{{ product.quantity }}</td>
+              <td>{{ product.quantity }} {{ product.unit }}</td>
               <td>{{ product.total_cost }}</td>
               <td>{{ product.delivered_date }}</td>
               <td>{{ product.best_before }}</td>
