--- a/crm/templates/service/recent_services.html
+++ b/crm/templates/service/recent_services.html
@@ -1,30 +1,28 @@
 {% extends 'base.html' %}
 {% block main %}
 <div class="container">
-    <h2>Oxirgi 10 kunda topshirilgan ovqatlar</h2>
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Ovqat</th>
-                <th>Oshpaz</th>
-                <th>Porsiya soni</th>
-                <th>Topshirildi vaqti</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for service in recent %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ service.meal }}</td>
-                <td>{{ service.served_by }}</td>
-                <td>{{ service.portion_count }}</td>
-                <td>{{ service.served_at|date:"Y-m-d H:i" }}</td>
-            </tr>
-            {% empty %}
-            <tr><td colspan="5">Ma'lumot yo‘q</td></tr>
-            {% endfor %}
-        </tbody>
-    </table>
+  <h2>So‘nggi 10 kunda berilgan ovqatlar</h2>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>#</th><th>Ovqat</th><th>Oshpaz</th>
+        <th>Porsiya</th><th>Vaqti</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for s in recent %}
+      <tr>
+        <td>{{ forloop.counter }}</td>
+        <td>{{ s.meal.name }}</td>
+        <td>{{ s.served_by.username }}</td>
+        <td>{{ s.portion_count }}</td>
+        <td>{{ s.served_at|date:"Y-m-d H:i" }}</td>
+      </tr>
+      {% empty %}
+      <tr><td colspan="5">Hech nima topilmadi.</td></tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  <a href="{% url 'service:service_list' %}" class="btn btn-secondary">Orqaga</a>
 </div>
 {% endblock %}
