Add Monthly Report and try to make graph for dashboard

--- a/crm/templates/base.html
+++ b/crm/templates/base.html
@@ -154,9 +154,9 @@
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
         <a href="{% url 'index' %}" class="brand-link elevation-4">
-{#            <img src="{% static 'img/AdminLTELogo.png' %}" alt="AdminLTE Logo"#}
-{#                 class="brand-image img-circle elevation-3"#}
-{#                 style="opacity: .8">#}
+<!--{#            <img src="{% static 'img/AdminLTELogo.png' %}" alt="AdminLTE Logo"#}-->
+<!--{#                 class="brand-image img-circle elevation-3"#}-->
+<!--{#                 style="opacity: .8">#}-->
             <span class="brand-text font-weight-light">Kindergarten Meal Service</span>
         </a>
 
@@ -247,12 +247,20 @@
                             <p>Inventory</p>
                         </a>
                     </li>
-                                        <li class="nav-item">
-                        <a href="{% url 'service:service_list' %}" class="nav-link">
-                            <i class="bi bi-bell-fill"></i>
-                            <p>Service</p>
-                        </a>
+                    <li class="nav-item">
+                      <a href="{% url 'service:service_list' %}" class="nav-link">
+                        <i class="bi bi-bell-fill"></i>
+                        <p>Service</p>
+                      </a>
                     </li>
+                    <li class="nav-item">
+                      <a href="{% url 'report:report_list' %}" class="nav-link">
+                        <i class="bi bi-bar-chart-fill"></i>
+                        <p>Hisobotlar</p>
+                      </a>
+                    </li>
+
+
 
 
 
@@ -479,6 +487,7 @@
 <script src="{% static 'js/adminlte.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="{% static 'js/demo.js' %}"></script>
+
 {% block js %}
 {% endblock js %}
 </body>
